--- a/plugin.yaml
+++ b/plugin.yaml
@@ -15,3 +15,7 @@ commands:
     description: Sidebar admin commands
 
 permissions:
+  sidebar.use:
+    description: Allow sidebar player commands
+  sidebar.admin:
+    description: Allow sidebar admin commands
