--- a/src/com/gmail/flintintoe/simpleSidebar/sidebars.yml
+++ b/src/com/gmail/flintintoe/simpleSidebar/sidebars.yml
@@ -25,18 +25,18 @@ sidebars:
   - "%divider%"
   - "&3&lFlint server"
   - ""
-  - " Stone: %stat_MINE_BLOCK_STONE%"
+  - " Stone: %STAT_MINE_BLOCK_STONE%"
   - ""
-  - " Coal: %stat_MINE_BLOCK_COAL_ORE%"
-  - " Iron: %stat_MINE_BLOCK_IRON_ORE%"
-  - " Redstone: %stat_MINE_BLOCK_REDSTONE_ORE%"
+  - " Coal: %STAT_MINE_BLOCK_COAL_ORE%"
+  - " Iron: %STAT_MINE_BLOCK_IRON_ORE%"
+  - " Redstone: %STAT_MINE_BLOCK_REDSTONE_ORE%"
   - ""
-  - " Lapiz lazuli: %stat_MINE_BLOCK_LAPIZ_ORE%"
-  - " Gold: %stat_MINE_BLOCK_GOLD_ORE%"
-  - " Quartz: %stat_MINE_BLOCK_QUARTZ_ORE%"
+  - " Lapiz lazuli: %STAT_MINE_BLOCK_LAPIZ_ORE%"
+  - " Gold: %STAT_MINE_BLOCK_GOLD_ORE%"
+  - " Quartz: %STAT_MINE_BLOCK_QUARTZ_ORE%"
   - ""
-  - " Emerald: %stat_MINE_BLOCK_EMERALD_ORE%"
-  - " Diamond: %stat_MINE_BLOCK_DIAMOND_ORE%"
+  - " Emerald: %STAT_MINE_BLOCK_EMERALD_ORE%"
+  - " Diamond: %STAT_MINE_BLOCK_DIAMOND_ORE%"
   - ""
   - "%divider%"
   - "ERROR 999 ILLUMINATI"
