--- a/src/com/gmail/flintintoe/simpleSidebar/sidebars.yml
+++ b/src/com/gmail/flintintoe/simpleSidebar/sidebars.yml
@@ -50,11 +50,11 @@ sidebars:
   - ""
   - ""
   - "%divider%"
-  - "Nothing here"
-  - " Hello lost one..."
-  - " "
-  - " here is 404 NOT FOUND."
-  - "  "
-  - "   "
-  - "    "
-  - " go back pls."
+  - "&3&lFlint server"
+  - ""
+  - ""
+  - " You are AFK."
+  - ""
+  - ""
+  - ""
+  - ""
