--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,21 +1,27 @@
 name: SimpleSidebar
-main: com.gmail.flintintoe.simpleSidebar.SimpleSidebar
-version: 0.3.0-SNAPSHOT
 author: Flarin
+version: 0.3.0-SNAPSHOT
+main: com.gmail.flintintoe.simpleSidebar.SimpleSidebar
 
 depend: []
 softdepend: [Vault, WorldGaurd]
 
 commands:
   sidebar:
-    usage: /sidebar
     description: Sidebar player commands
-  adminsidebar:
-    usage: /adminsidebar
+    aliases: [sb]
+    usage: /sidebar
+    permission: sidebar.use
+  sidebaradmin:
     description: Sidebar admin commands
+    aliases: [asidebar, asb]
+    usage: /adminsidebar
+    permission: sidebar.admin
 
 permissions:
   sidebar.use:
     description: Allow sidebar player commands
+    default: true
   sidebar.admin:
     description: Allow sidebar admin commands
+    default: op
