--- a/src/config.yml
+++ b/src/config.yml
@@ -6,7 +6,25 @@
 
 # Edit plugin configurations here.
 
-plugin_enabled: true
+#### Please do not change this value to avoid unexpected errors
 config_version: 1.0.0
 
+# Global
+
+#### Enable this plugin
+plugin_enabled: true
+
+# Default sidebar
+
+#### If this is true, the first sidebar will be loaded when a player joins the server
+firstSidebarIsDefault: true
+
+# AFK optimisation (for performance)
+
+#### Duration of inactivity for a player to go into AFK mode
+   # Set to 0 to disable AFK optimisation feature
 AFK_timer: 30
+#### If this is true, the last sidebar will be used when a player enters AFK mode
+   # With this enabled, a player cannot set their sidebar to the last sidebar
+lastSidebarIsForAFK: true
+
