--- a/src/sidebars.yml
+++ b/src/sidebars.yml
@@ -34,6 +34,8 @@ sidebars:
   - "     %region_2%"
   - "     %region_3%"
   - ""
+  - " Time left till AFK: %afk_timeLeft%"
+  - ""
   - "%divider%"
   - "&3&lFlint server"
   - ""
@@ -65,8 +67,11 @@ sidebars:
   - "&3&lFlint server"
   - ""
   - ""
-  - " You are AFK."
   - ""
+  - ""
+  - " You are now &c&lAFK"
+  - ""
+  - "    Time since afk: %afk_time%"
   - ""
   - ""
   - ""
