--- a/src/config.yml
+++ b/src/config.yml
@@ -4,27 +4,48 @@
 #   > _ < |  _| | |_| | |  | __/
 #  /_/ \_\|_| |_|\__,_|_|  \___|
 
+# TODO Change big text here to SimpleSidebar
+#  ____
+#  \
+#   --
+#
+
 # Edit plugin configurations here.
 
-#### Please do not change this value to avoid unexpected errors
-config_version: 1.0.0
+# Please do not change this value to avoid unexpected errors
+config_version: 1.1.0
 
-# Global
+#### Plugin
 
-#### Enable this plugin
+# Enable this plugin
 plugin_enabled: true
 
-# Default sidebar
+### Default sidebar
 
-#### If this is true, the first sidebar will be loaded when a player joins the server
-first_sidebar_is_default: true
+# If this is true, the first sidebar will be loaded when a player joins the server
+set_on_login: true
 
-# AFK optimisation (for performance)
+### AFK sidebar
 
-#### Duration of inactivity for a player to go into AFK mode
-   # Set to 0 to disable AFK optimisation feature
-AFK_timer: 30
-#### If this is true, the last sidebar will be used when a player enters AFK mode
-   # With this enabled, a player cannot set their sidebar to the last sidebar
-last_sidebar_is_afk: true
+# Duration of inactivity in seconds for a player to go into AFK mode
+# Set to 0 to disable AFK sidebar feature
+afk_timer: 30
+# Allow people to set themselves to AFK
+allow_change_afk: false
+# If this is true, placeholders will be updated regularly in afk sidebar
+afk_placeholder_update: true
+
+### Optimisation (for performance)
+
+# Update sidebar only when placeholders update (May cause lag)
+update_placholder_async: true
+
+# TODO set which placeholders to update
+
+# Update sidebar on set intervals
+update_sidebar_sync: false
+# Set the delay in seconds between each automatic sidebar update
+sidebar_update_timer: 1
+
+
 
