--- a/src/sidebars.yml
+++ b/src/sidebars.yml
@@ -3,6 +3,7 @@
 #  \ \_/ /| |_| |/ _` | `__/ _ \
 #   > _ < |  _| | |_| | |  | __/
 #  /_/ \_\|_| |_|\__,_|_|  \___|
+# Simple Sidebar - by xFlarinFlint (flintintoe or Flarin)
 
 # Edit sidebar configurations here.
 
