--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,14 +13,19 @@ jobs:
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
-
-    working_directory: ~/repo/
-
+      
     environment:
       # Customize the JVM maximum heap limit
       JVM_OPTS: -Xmx1000m
       TERM: dumb
+      
+    working_directory: ~/repo/
     
+    branches:
+      ignore:
+       - release
+       - gh-pages
+       
     steps:
       - checkout
 
@@ -41,5 +46,9 @@ jobs:
       # run tests!
       - run: gradle test
 
-
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build
 
