--- a/build.gradle
+++ b/build.gradle
@@ -6,21 +6,24 @@ version = '0.7.0'
 
 description = "A Minecraft Spigot plugin for customizable sidebars"
 
-sourceCompatibility = 1.10
-targetCompatibility = 1.10
+compileJava {
+    sourceCompatibility = '1.8'
+    targetCompatibility = '1.8'
+}
 
 repositories {
     maven { url = "https://hub.spigotmc.org/nexus/content/repositories/snapshots/" }
+    maven { url = 'https://oss.sonatype.org/content/repositories/snapshots'}
     maven { url = "http://nexus.hc.to/content/repositories/pub_releases" }
     maven { url = "http://maven.sk89q.com/repo/" }
     maven { url = "http://repo.maven.apache.org/maven2" }
+    mavenLocal()
 }
 
 dependencies {
     compile group: 'com.sk89q.worldguard', name: 'worldguard-legacy', version: '6.2'
     compile group: 'org.spigotmc', name: 'spigot-api', version: '1.12.2-R0.1-SNAPSHOT'
-    compile group: 'org.bukkit', name: 'bukkit', version: '1.12.2-R0.1-SNAPSHOT'
-    compile group: 'org.spigotmc', name: 'spigot', version: '1.12.2-R0.1-SNAPSHOT'
+    //compile group: 'org.bukkit', name: 'bukkit', version: '1.12.2-R0.1-SNAPSHOT'
     compile group: 'net.milkbowl.vault', name: 'VaultAPI', version: '1.6'
     compile group: 'junit', name: 'junit', version: '4.12'
     compile fileTree(dir: 'libs', include: '*.jar')
