--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,15 @@ version = 'pre0.7.0'
 
 description = "A Minecraft Spigot plugin for customizable sidebars"
 
+task buildplugin
+
 compileJava {
     sourceCompatibility = '1.8'
     targetCompatibility = '1.8'
+}
+
+buildplugin {
+
 }
 
 repositories {
