--- a/src/main/java/messages.yml
+++ b/src/main/java/messages.yml
@@ -5,8 +5,8 @@
 #  /_/ \_\|_| |_|\__,_|_|  \___|
 # Simple Sidebar - by xFlarinFlint (flintintoe or Flarin)
 
-# Edit messages sent by this plugin here.
-messages_version: 1.0.0
+# Edit MESSAGES sent by this plugin here.
+messages_version: 1.0
 
 messages:
 - "This feature is coming soon..."
