--- a/src/main/java/sidebars.yml
+++ b/src/main/java/sidebars.yml
@@ -10,22 +10,22 @@
 # Please do not change this value to avoid unexpected errors
 sidebars_version: 1.1
 
-#### GENERAL GUIDELINES:
-   #
-   # INSTRUCTIONS
-   # Use numbers in order from 1 to n for SIDEBARS
-   # Aliases are alternative names a player can use to call the sidebar
-   # Header is what is displayed at the top of the sidebar
-   # Entries are the contents of the sidebar
-   #
-   # NOTES:
-   # - A line can have a maximum of 40 characters (If the line has more than 40 characters the line will be cut off at the end)
-   # - When there is a duplicate line in a sidebar, the plugin will add spaces to prevent duplicates from ruining the sidebar
-   # - Color codes are supported (Use &)
-   #
-   # Check the plugin wiki for placeholders and more!
-   # https://github.com/flintintoe/simpleSidebar/wiki
-####
+## GENERAL GUIDELINES:
+#
+# INSTRUCTIONS
+# Use numbers in order from 1 to n for SIDEBARS
+# Aliases are alternative names a player can use to call the sidebar
+# Header is what is displayed at the top of the sidebar
+# Entries are the contents of the sidebar
+#
+# NOTES:
+# - A line can have a maximum of 40 characters (If the line has more than 40 characters the line will be cut off at the end)
+# - When there is a duplicate line in a sidebar, the plugin will add spaces to prevent duplicates from ruining the sidebar
+# - Color codes are supported (Use &)
+#
+# Check the plugin wiki for placeholders and more!
+# https://github.com/flintintoe/simpleSidebar/wiki
+##
 
 sidebars:
   1:
@@ -36,18 +36,19 @@ sidebars:
     entries:
     - ""
     - " Welcome, &a%player%&r!"
-    - "   Today is %day%/%month%/%year%"
+    - "   Today is %date%"
     - ""
     - "   [&bTime&r]"
-    - "    %hour%:%minute%:%second%  %timezone%"
+    - "    %time_HH:mm:ss, dd/MM/yyyy%  %timezone%"
     - "   [&bCash&r]"
-    - "     %balance%₩"
+    - "     $%balance%"
     - "   [&bRegions&r]"
     - "     %region_1%"
     - "     %region_2%"
     - "     %region_3%"
     - ""
-    - " Time left till AFK: %afk_timeLeft%"
+    - " Time left till AFK: %afktimeLeft%"
+    - " %region_p/xFlarinFlint_1"
     - ""
   2:
     name: "stat"
@@ -57,18 +58,18 @@ sidebars:
     header: "&3&lFlint server"
     entries:
     - ""
-    - " Stone: %STAT_MINE_BLOCK_STONE%"
+    - " Stone: %stat_MINE_BLOCK_STONE%"
     - ""
-    - " Coal: %STAT_MINE_BLOCK_COAL_ORE%"
-    - " Iron: %STAT_MINE_BLOCK_IRON_ORE%"
-    - " Redstone: %STAT_MINE_BLOCK_REDSTONE_ORE%"
+    - " Coal: %stat_MINE_BLOCK_COAL_ORE%"
+    - " Iron: %stat_MINE_BLOCK_IRON_ORE%"
+    - " Redstone: %stat_MINE_BLOCK_REDSTONE_ORE%"
     - ""
-    - " Lapiz lazuli: %STAT_MINE_BLOCK_LAPIZ_ORE%"
-    - " Gold: %STAT_MINE_BLOCK_GOLD_ORE%"
-    - " Quartz: %STAT_MINE_BLOCK_QUARTZ_ORE%"
+    - " Lapiz lazuli: %stat_MINE_BLOCK_LAPIZ_ORE%"
+    - " Gold: %stat_MINE_BLOCK_GOLD_ORE%"
+    - " Quartz: %stat_MINE_BLOCK_QUARTZ_ORE%"
     - ""
-    - " Emerald: %STAT_MINE_BLOCK_EMERALD_ORE%"
-    - " Diamond: %STAT_MINE_BLOCK_DIAMOND_ORE%"
+    - " Emerald: %stat_MINE_BLOCK_EMERALD_ORE%"
+    - " Diamond: %stat_MINE_BLOCK_DIAMOND_ORE%"
     - ""
   3:
     name: "illuminati"
