--- a/src/main/java/sidebars.yml
+++ b/src/main/java/sidebars.yml
@@ -32,44 +32,44 @@ sidebars:
     name: "main"
     aliases:
     - "first"
-    header: "&6&lFlint server"
+    header: "&6&lServer info"
     entries:
     - ""
     - " Welcome, &a%player%&r!"
     - "   Today is %date%"
     - ""
     - "   [&bTime&r]"
-    - "    %time_HH:mm:ss, dd/MM/yyyy%  %timezone%"
+    - "    %time.HH:mm:ss, dd/MM/yyyy%  %timezone%"
     - "   [&bCash&r]"
     - "     $%balance%"
     - "   [&bRegions&r]"
-    - "     %region_1%"
-    - "     %region_2%"
-    - "     %region_3%"
+    - "     %region.1%"
+    - "     %region.2%"
+    - "     %region.3%"
     - ""
     - " Time left till AFK: %afktimeLeft%"
-    - " %region_p/xFlarinFlint_1"
+    - " %region.p/xFlarinFlint.1"
     - ""
   2:
     name: "stat"
     aliases:
     - "stats"
     - "second"
-    header: "&3&lFlint server"
+    header: "&3&lServer stats"
     entries:
     - ""
-    - " Stone: %stat_MINE_BLOCK_STONE%"
+    - " Stone: %mstat.MINE_BLOCK.STONE%"
     - ""
-    - " Coal: %stat_MINE_BLOCK_COAL_ORE%"
-    - " Iron: %stat_MINE_BLOCK_IRON_ORE%"
-    - " Redstone: %stat_MINE_BLOCK_REDSTONE_ORE%"
+    - " Coal: %mstat.MINE_BLOCK.COAL_ORE%"
+    - " Iron: %mstat.MINE_BLOCK.IRON_ORE%"
+    - " Redstone: %mstat.MINE_BLOCK.REDSTONE_ORE%"
     - ""
-    - " Lapiz lazuli: %stat_MINE_BLOCK_LAPIZ_ORE%"
-    - " Gold: %stat_MINE_BLOCK_GOLD_ORE%"
-    - " Quartz: %stat_MINE_BLOCK_QUARTZ_ORE%"
+    - " Lapiz lazuli: %mstat.MINE_BLOCK_LAPIZ_ORE%"
+    - " Gold: %mstat.MINE_BLOCK.GOLD_ORE%"
+    - " Quartz: %mstat.MINE_BLOCK.QUARTZ_ORE%"
     - ""
-    - " Emerald: %stat_MINE_BLOCK_EMERALD_ORE%"
-    - " Diamond: %stat_MINE_BLOCK_DIAMOND_ORE%"
+    - " Emerald: %mstat.MINE_BLOCK.EMERALD_ORE%"
+    - " Diamond: %mstat.MINE_BLOCK.DIAMOND_ORE%"
     - ""
   3:
     name: "illuminati"
@@ -99,7 +99,7 @@ sidebars:
     - ""
     - " You are now &c&lAFK"
     - ""
-    - "    Time since afk: %afk_time%"
+    - "    Time since afk: %afktime%"
     - ""
     - ""
     - ""
