--- a/src/main/java/placeholders.yml
+++ b/src/main/java/placeholders.yml
@@ -5,8 +5,8 @@
 #  /_/ \_\|_| |_|\__,_|_|  \___|
 # Simple Sidebar - by xFlarinFlint (flintintoe or Flarin)
 
-# Edit messages sent by this plugin here.
-messages_version: 1.0
+# Add placeholders used by this plugin here.
+placeholders_version: 1.0
 
-messages:
+placeholders:
 - "This feature is coming soon..."
