--- a/src/main/java/config.yml
+++ b/src/main/java/config.yml
@@ -3,39 +3,34 @@
 #  \ \_/ /| |_| |/ _` | `__/ _ \
 #   > _ < |  _| | |_| | |  | __/
 #  /_/ \_\|_| |_|\__,_|_|  \___|
-# Simple Sidebar - by xFlarinFlint (flintintoe or Flarin)
+# Simple Sidebars - by xFlarinFlint (flintintoe or Flarin)
 
 # Edit plugin configurations here.
 
 # Please do not change this value to avoid unexpected errors
-config_version: 1.3
+config_version: 1.4
 
-
-#### Plugin
-
-# Enable this plugin
-plugin_enabled: true
 
 # Allow admins to bypass the allow_change_afk (if allow_change_afk is set to false)
 admin_bypass: true
 
 # Set to first sidebar (Index 1) when a player joins the server
-set_on_login: false
+set_on_login: true
 
 
 ### AFK sidebar
 
-# Duration of inactivity in seconds for a player to go into AFK mode
+# Duration of inactivity in ticks for a player to go into AFK mode (1 tick is 0.1 seconds)
 # Set to 0 to disable AFK sidebar feature
-afk_timer: 60
+afk_timer: 600
 
 # Allow people to set themselves to AFK
 allow_change_afk: false
 
 
-### Sidebar update
+### Sidebars update
 
-# Set the delay in seconds between each synchronous sidebar update
-update_timer: 1
+# Set the delay in ticks between each synchronous sidebar update (1 tick is 0.1 seconds)
+update_timer: 5
 # If this is true, placeholders will be updated on set update timer even when afk
 update_sidebar_sync_afk: false
