--- a/src/main/java/placeholders.yml
+++ b/src/main/java/placeholders.yml
@@ -3,7 +3,7 @@
 #  \ \_/ /| |_| |/ _` | `__/ _ \
 #   > _ < |  _| | |_| | |  | __/
 #  /_/ \_\|_| |_|\__,_|_|  \___|
-# Simple Sidebar - by xFlarinFlint (flintintoe or Flarin)
+# Simple Sidebars - by xFlarinFlint (flintintoe or Flarin)
 
 # Add placeholders used by this plugin here.
 placeholders_version: 1.0
