--- a/src/main/java/placeholders.yml
+++ b/src/main/java/placeholders.yml
@@ -6,7 +6,14 @@
 # Simple Sidebars - by xFlarinFlint (flintintoe or Flarin)
 
 # Add placeholders used by this plugin here.
-placeholders_version: 1.0
+placeholders_version: 1.1
 
-placeholders:
-- "This feature is coming soon..."
+servername:
+  value: "FlintServer"
+
+lucky:
+  type: "random"
+  update: "daily"
+  values:
+  - "You are lucky"
+  - "I guess today is not your lucky day!"
